<?xml version="1.0"?>
<package>
  <name>rtt_gazebo_activity</name>
  <version>0.0.0</version>
  <description>The rtt_gazebo_activity package</description>

  <maintainer email="johannes@intermodalics.eu">Johannes Meyer</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>rtt_rosgraph_msgs</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rtt_rosgraph_msgs</run_depend>

</package>
