<?xml version="1.0"?>
<package>
  <name>rtt_gazebo_console</name>
  <version>0.0.0</version>
  <description>The rtt_gazebo_console package</description>

  <maintainer email="jbo@jhu.edu">jbohren</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>ocl-deployment</build_depend>
  <build_depend>ocl-taskbrowser</build_depend>
  <build_depend>ocl-logging</build_depend>

  <export>
  </export>
</package>
