<?xml version="1.0"?>
<package>
  <name>rtt_gazebo_console</name>
  <version>0.1.1</version>
  <description>The rtt_gazebo_console package</description>

  <maintainer email="jbo@jhu.edu">jbohren</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>

  <export>
  </export>
</package>
