<?xml version="1.0"?>
<package>
  <name>rtt_gazebo_examples</name>
  <version>0.0.0</version>
  <description>The rtt_gazebo_examples package</description>

  <maintainer email="jbo@jhu.edu">jbohren</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_gazebo_deployer</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_gazebo_deployer</run_depend>

  <export>
  </export>
</package>
