<?xml version="1.0"?>
<package>
  <name>rtt_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>The rtt_gazebo_plugin package</description>

  <maintainer email="jbo@jhu.edu">jbohren</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>

  <export>
  </export>
</package>
